[gd_scene load_steps=4 format=3 uid="uid://cmxt8djmedsom"]

[ext_resource type="Script" path="res://Scripts/Menus/video_settings.gd" id="1_p37qv"]
[ext_resource type="FontFile" uid="uid://7x3cp1mf1vp4" path="res://Assets/Fonts/Switzer-BlackItalic.otf" id="2_v1ulh"]

[sub_resource type="LabelSettings" id="LabelSettings_6u47u"]
font = ExtResource("2_v1ulh")
font_size = 32

[node name="Video" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_p37qv")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Display" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Display" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2
text = "Display"
label_settings = SubResource("LabelSettings_6u47u")

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Resolution"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Resolution"]
layout_mode = 2

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Fullscreen"]
layout_mode = 2
text = "Window Mode"

[node name="FullscreenOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Fullscreen"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../VSync/VSyncCheck")

[node name="VSync" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/VSync"]
layout_mode = 2
text = "Vsync"

[node name="VSyncCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/VSync"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../../Fullscreen/FullscreenOption")

[node name="FXAA" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/FXAA"]
layout_mode = 2
text = "FXAA"

[node name="FXAACheck" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/FXAA"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MSAA" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/MSAA"]
layout_mode = 2
text = "MSAA"

[node name="MSAAOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/MSAA"]
layout_mode = 2

[node name="Framerate" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Framerate"]
layout_mode = 2
text = "Frame Rate Limit"

[node name="FramerateOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Framerate"]
layout_mode = 2

[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Resolution/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Fullscreen/FullscreenOption" to="." method="_on_fullscreen_option_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/VSync/VSyncCheck" to="." method="_on_v_sync_check_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/FXAA/FXAACheck" to="." method="_on_fxaa_check_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/MSAA/MSAAOption" to="." method="_on_msaa_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Display/Framerate/FramerateOption" to="." method="_on_framerate_option_item_selected"]
